--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li>Aktivitäten</li>
+                <li><a href="html/activity.html">Aktivitäten</a></li>
                 <li>Mein Profil</li>
             </ul>
         </nav>
